wikijs/http-route.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: wikijs
  namespace: vehagn
  annotations:
    link.argocd.argoproj.io/external-link: https://wikijs.s9n.no
spec:
  parentRefs:
    - name: gke-gateway
      namespace: gateway
  hostnames:
    - wikijs.s9n.no
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: wikijs
          port: 80
